--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/angular-cookies": "1.4.2",
     "@types/angular-material": "1.1.39",
     "@types/angular-resource": "1.5.6",
+    "@types/angular-route": "^1.3.4",
     "@types/es6-promise": "0.0.32",
     "@types/jquery": "^2.0.48",
     "autoprefixer": "6.4.1",
@@ -49,7 +50,7 @@
     "angular-material": "1.1.1",
     "angular-messages": "1.5.8",
     "angular-resource": "1.5.8",
-    "angular-sanitize": "1.5.8",
-    "angular-ui-router": "1.0.0-beta.3"
+    "angular-route": "1.5.8",
+    "angular-sanitize": "1.5.8"
   }
 }
