--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
 		"module": "commonjs",
 		"target": "es5",
 		"noImplicitAny": false,
-        "removeComments": true,
+		"removeComments": true,
+		"lib": ["es2015", "dom"],
         "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
