--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/angular-material": "1.1.39",
     "@types/angular-resource": "1.5.6",
     "@types/angular-route": "^1.3.4",
-    "@types/es6-promise": "0.0.32",
     "@types/jquery": "^2.0.48",
     "autoprefixer": "6.4.1",
     "awesome-typescript-loader": "2.2.4",
@@ -25,6 +24,7 @@
     "css-loader": "0.25.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "2.22.0",
     "ng-annotate-loader": "0.1.1",
     "node-sass": "4.5.3",
