--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "angular-typescript-webpack",
-  "version": "0.1.1",
+  "name": "demo-reddit-app",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/evan-carey/angular-typescript-webpack.git"
+    "url": "https://github.com/erictsai6/demo-reddit-app.git"
   },
   "scripts": {
     "build": "rimraf dist && webpack --bail --progress --profile --NODE_ENV=production",
     "server": "webpack-dev-server --history-api-fallback --inline --hot --progress --NODE_ENV=dev",
-    "start": "npm run server"
+    "start": "npm run server",
+    "ghs": "ghs"
   },
   "devDependencies": {
     "@types/angular": "1.5.16",
